# pick-basic-treesitter

./: .talismanrc
.github/workflows/: ci.yml
pickbasic-lsp/: .gitignore  pyproject.toml
pickbasic-lsp/editors/vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
pickbasic-lsp/editors/vscode/src/: extension.ts
pickbasic-lsp/editors/vscode/syntaxes/: pickbasic.tmLanguage.json
pickbasic-lsp/editors/vscode/test-files/: INVOICE.CALC.bas
pickbasic-lsp/pickbasic_lsp/: __main__.py  completion.py  definition.py  diagnostics.py  hover.py  parser.py  references.py  server.py  symbols.py
pickbasic-lsp/tests/: test_server.py
