[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickbasic-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for Pick BASIC"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3",
    "tree-sitter>=0.23",
]

[project.scripts]
pickbasic-lsp = "pickbasic_lsp.__main__:main"
